# plato-project

./: README.md  main.py  pyproject.toml
src/plato_project/: __init__.py
